Game test (onGameStarted) #4