@@ -29,26 +29,6 @@
 
     <build>
         <plugins>
-            <!-- PicoCLI Annotation processor -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <!-- annotationProcessorPaths requires maven-compiler-plugin version 3.5 or higher -->
-                <version>${maven-compiler-plugin-version}</version>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>info.picocli</groupId>
-                            <artifactId>picocli-codegen</artifactId>
-                            <version>4.7.1</version>
-                        </path>
-                    </annotationProcessorPaths>
-                    <compilerArgs>--enable-preview
-                    </compilerArgs>
-                    <source>19</source>
-                    <target>19</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
